test/cases/compile_errors/atomic_orderings_of_fence_Acquire_or_stricter.zig
export fn entry() void {
    @fence(.Monotonic);
}

// error
// backend=stage2
// target=native
//
// :2:13: error: atomic ordering must be Acquire or stricter
